# test-proj

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: mypy.yml  required-review.yml  ruff.yml
davidmcnamee/: example.py
jtz15/: example.py
